<resources>
    <string name="app_name">TruckTracker</string>

    <string name="welcome">Bienvenue</string>
    <string name="connect_bdo">Connection auto</string>
    <string name="scanner">Scanner</string>
    <string name="scanning">Scanning devices…</string>
    <string name="unknown_device">Unknown</string>

    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="bdo_not_saved">Pas de BDO sauvegardé</string>

    <string name="hint_name">Nom</string>
    <string name="hint_tyre_type">Type de roue</string>
    <string name="hint_trailer_axles">Essieu de remorque</string>
    <string name="hint_tractor_axles">Essieu de tracteur</string>
    <string name="validate">Valider</string>

    <string name="start_location_updates_button_text">Start receiving location updates</string>
    <string name="stop_location_updates_button_text">Stop receiving location updates</string>
    <string name="journey_time">Temps du trajet : </string>
    <string name="gps_unable">Le GPS est activé : </string>
    <string name="location_number">Nombre de localisations reçu : </string>
    <string name="send_file">Envoi d\'un fichier en cours… </string>
    <string name="unknow">Inconnu</string>
    <string name="error_gps_disabled">Veuillez activer votre localisation</string>
    <string name="start_journey">Trajet débuté le : </string>

    <string name="message_fin">Fin du trajet</string>

    <string name="notification">Service de localisation en cours…</string>
    <string name="type_de_roue">Type de roue</string>
    <string name="nombre_d_essieu_de_remorque">Nombre d\'essieu de remorque</string>
    <string name="nombre_d_essieu_du_camion">Nombre d\'essieu du camion</string>
    <string name="frequency_accelerometer">Fréquence de l\'accéléromètre</string>
    <string name="frequency_in_milisecond">Fréquence en ms</string>


</resources>
