<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ToggleButton
        android:id="@+id/fj_btn_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/start_location_updates_button_text"
        android:textOff="@string/start_location_updates_button_text"
        android:textOn="@string/stop_location_updates_button_text"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fj_tv_gps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gps_unable"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.188" />

    <TextView
        android:id="@+id/fj_tv_gps_enabled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unknow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.816"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.189" />

    <TextView
        android:id="@+id/fj_tv_send_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="118dp"
        android:layout_marginEnd="118dp"
        android:gravity="center_vertical"
        android:text="@string/send_file"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fj_btn_location"
        app:layout_constraintVertical_bias="0.67" />

    <TextView
        android:id="@+id/fj_tv_msg_err"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_gps_disabled"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.271"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fj_tv_gps"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/fj_container_journey_infos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_border"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_journey"
                tools:layout_editor_absoluteY="336dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_form" />

            <TextView
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:text="@string/journey_time" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_form" />

            <TextView
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:text="@string/location_number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/fj_tv_start_journey"
                android:layout_width="88dp"
                android:layout_height="17dp"
                android:text="@string/unknow"
                tools:layout_editor_absoluteX="-31dp"
                tools:layout_editor_absoluteY="424dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_form" />

            <Chronometer
                android:id="@+id/fj_chronometer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_form" />

            <TextView
                android:id="@+id/fj_tv_number_loc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknow" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>