<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal">

    <ImageView
        android:id="@+id/fcb_bckgrd"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/background_app"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/fcb_btn_scan"
            android:layout_width="140dp"
            android:layout_height="70dp"
            android:layout_below="@+id/fcb_tv_name_bdo"
            android:layout_marginStart="224dp"
            android:text="@string/scanner"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.838" />

        <TextView
            android:id="@+id/fcb_tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="#000000"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.023" />

        <Button
            android:id="@+id/fcb_btn_connexion_auto"
            android:layout_width="156dp"
            android:layout_height="70dp"
            android:layout_below="@+id/fcb_tv_name_bdo"
            android:text="@string/connect_bdo"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fcb_btn_scan"
            app:layout_constraintHorizontal_bias="0.761"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.838" />

        <TextView
            android:id="@+id/fcb_tv_name_bdo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bdo_not_saved"
            app:layout_constraintBottom_toTopOf="@+id/fcb_btn_connexion_auto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.195"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.998" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>